--- a/menuRestauraci/index.html
+++ b/menuRestauraci/index.html
@@ -40,12 +40,12 @@
     </header>
     <main>
         <div id="categories">
-            <a href="#">Česká kuchyně</a>
-            <a href="#">Americká kuchyně</a>
-            <a href="#">Asijská kuchyně</a>
-            <a href="#">Vegetariánská kuchyně</a>
-            <a href="#">Streetfood</a>
-            <a href="#">Turecká kuchyně</a>
+            <a href="/ceska">Česká kuchyně</a>
+            <a href="/americka">Americká kuchyně</a>
+            <a href="/asijska">Asijská kuchyně</a>
+            <a href="/vegetarianska">Vegetariánská kuchyně</a>
+            <a href="/streetfood">Streetfood</a>
+            <a href="/turecka">Turecká kuchyně</a>
         </div>
         <div id="restaurantTitle">
             <h2>Restaurace</h2>
