fixed index.html and app.py

--- a/static/html/index/index.html
+++ b/static/html/index/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/style/index.css" type="text/css">
+    <link rel="stylesheet" href="../style/index.css" type="text/css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>Kategorie</title>
@@ -18,7 +18,7 @@
 
     <header>
         <div id="logo">
-            <img src="logo.png" alt="Logo společnosti">
+            <img src="../images/logo.png" alt="Logo společnosti" width="64" height="64">
         </div>
         <div id="header_buttons">
             <button>
@@ -39,12 +39,12 @@
     </header>
     <main>
         <div id="categories">
-            <a href="/ceska">Česká kuchyně</a>
-            <a href="/americka">Americká kuchyně</a>
-            <a href="/asijska">Asijská kuchyně</a>
-            <a href="/vegetarianska">Vegetariánská kuchyně</a>
-            <a href="/streetfood">Streetfood</a>
-            <a href="/turecka">Turecká kuchyně</a>
+            <a href="/html/kategorie/ceska.html">Česká kuchyně</a>
+            <a href="/html/kategorie/americka.html">Americká kuchyně</a>
+            <a href="/html/kategorie/asijska.html">Asijská kuchyně</a>
+            <a href="/html/kategorie/vegetarianska.html">Vegetariánská kuchyně</a>
+            <a href="/html/kategorie/streetfood.html">Streetfood</a>
+            <a href="/html/kategorie/turecka.html">Turecká kuchyně</a>
         </div>
         <div id="restaurantTitle">
             <h2>Restaurace</h2>
