Upravene tlacitka a razeni karet

--- a/static/html/index.html
+++ b/static/html/index.html
@@ -22,18 +22,23 @@
         </div>
         <div id="header_buttons">
             <button>
-
-
-                <span class><span class="material-symbols-outlined">mail</span><span class="button-text">Napiste
-                        nam</span></span>
-
+                <div class="column">
+                    <span class="button-text">Napiste nam</span>
+                </div>
+                <div class="column">
+                    <span class="material-symbols-outlined">mail</span>
+                </div>
             </button>
             <button>
+                <div class="column">
                 <span class="button-text">Prihlaseni</span>
                 <span class="button-subtext">Registrace</span>
+            </div>
+            <div class="column">
                 <span class="material-symbols-outlined">
                     account_circle
                 </span>
+            </div>
             </button>
         </div>
     </header>
