komentáře pro příště

--- a/static/html/index.html
+++ b/static/html/index.html
@@ -28,8 +28,9 @@
             </button>
             <button>
                 <div class="column">
-                <span class="button-text">Prihlaseni</span>
-                <span class="button-subtext">Registrace</span>
+                    <a href="/html/menu/prihlaseni.html" class="button-link"></a>
+                        <span class="button-text">Prihlaseni</span><!--vlozit odkaz na prihlaseni.html-->
+                <span class="button-subtext">Registrace</span><!--vlozit odkaz na registrace.html-->
             </div>
             <div class="column">
                 <span class="material-symbols-outlined">
