--- a/static/html/menu/prihlaseni.html
+++ b/static/html/menu/prihlaseni.html
@@ -2,7 +2,7 @@
 <html lang="cs">
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
-    <link rel="stylesheet" href="../style/prihlaseni/prihlaseni.css" type="text/css">
+    <link rel="stylesheet" href="../style/menu/prihlaseni.css" type="text/css">
     <title>Přihlásit se</title>
 
 </head>
