--- a/static/html/menu/mujprofil.html
+++ b/static/html/menu/mujprofil.html
@@ -28,12 +28,11 @@
             </button>
             <button>
                 <div class="column">
-                    <span class="button-text">Prihlaseni</span><!--vlozit odkaz na prihlaseni.html-->
-                    <span class="button-subtext">Registrace</span><!--vlozit odkaz na registrace.html-->
+                    <span class="button-text">JMENO UZIVATELE</span><!--vlozit odkaz na osobniprofil.html, pokus je prihlasen-->
                 </div>
                 <div class="column">
                     <span class="material-symbols-outlined">
-                        account_circle
+                        settings
                     </span>
                 </div>
             </button>
